tests/baselines/reference/classBodyWithStatements.errors.txt
tests/cases/conformance/classes/classDeclarations/classBody/classBodyWithStatements.ts(2,5): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/classes/classDeclarations/classBody/classBodyWithStatements.ts(3,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/classDeclarations/classBody/classBodyWithStatements.ts(6,5): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/classes/classDeclarations/classBody/classBodyWithStatements.ts(7,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/classes/classDeclarations/classBody/classBodyWithStatements.ts (4 errors) ====
    class C {
        var x = 1;
        ~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    class C2 {
        function foo() {}
        ~~~~~~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    
    var x = 1;
    var y = 2;
    class C3 {
        x: number = y + 1; // ok, need a var in the statement production
    }